--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ h1 {
   font-size: 80px;
   font-weight: 400;
   letter-spacing: -1.5px;
+  margin: 0;
 }
 
 h2 {
@@ -45,6 +46,31 @@ h6 {
 code {
   color: #e95400;
   font-weight: bold;
+}
+
+.hero {
+  background-color: #863ae8;
+  height: 100vh;
+  color: white;
+  text-align: center;
+
+  /* flexbox */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.hero h1, .hero p {
+  width: 75%;
+  max-width: 900px;
+  margin: 16px 0;
+}
+
+.hero hr {
+  width: 50%;
+  color: white;
+  margin: 32px 0;
 }
 
 .content {
